--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-
 <!DOCTYPE html><html><body>
-<h1>🌿 AgriNexus World - 전체 기능 확장</h1>
-<ul>
-  <li><a href="smartfarm.html">스마트팜 설계 생성기</a></li>
-  <li><a href="seeds.html">종자 추천 시스템</a></li>
-  <li><a href="firebase.html">Firebase 저장</a></li>
-  <li><a href="chart.html">실시간 시세 그래프</a></li>
-</ul>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
+<h1>🌿 AgriNexus World - 메인</h1>
+<p>전체 통합 자동화 시스템</p>
 </body></html>
