--- a/notify.html
+++ b/notify.html
@@ -1,9 +1,19 @@
-
 <!DOCTYPE html><html><body>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
 <h1>🔔 알림 시스템</h1>
-<form onsubmit="event.preventDefault(); alert('알림 전송 완료');">
-  사용자: <input type="text" id="user"><br>
-  메시지: <input type="text" id="msg"><br>
-  <button type="submit">알림 전송</button>
-</form>
+<p>🔔 알림 시스템 입력폼 및 기능 영역입니다.</p>
 </body></html>
