--- a/ai.html
+++ b/ai.html
@@ -1,30 +1,19 @@
-
 <!DOCTYPE html><html><body>
-<h1>🤖 OpenAI 자동 생성기</h1>
-<form onsubmit="event.preventDefault(); callOpenAI();">
-  API Key: <input type="password" id="apikey"><br>
-  프롬프트 입력: <input type="text" id="prompt"><br>
-  <button type="submit">응답 생성</button>
-</form>
-<pre id="output" style="margin-top:1em; background:#f3f3f3; padding:1em;"></pre>
-<script>
-async function callOpenAI() {
-  const key = document.getElementById("apikey").value;
-  const prompt = document.getElementById("prompt").value;
-  document.getElementById("output").textContent = "요청 중...";
-  const response = await fetch("https://api.openai.com/v1/completions", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      "Authorization": "Bearer " + key
-    },
-    body: JSON.stringify({
-      model: "text-davinci-003",
-      prompt: prompt,
-      max_tokens: 50
-    })
-  });
-  const data = await response.json();
-  document.getElementById("output").textContent = data.choices[0].text;
-}
-</script></body></html>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
+<h1>🤖 GPT 생성기</h1>
+<p>🤖 GPT 생성기 입력폼 및 기능 영역입니다.</p>
+</body></html>
