--- a/report.html
+++ b/report.html
@@ -1,18 +1,19 @@
-
 <!DOCTYPE html><html><body>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
 <h1>📑 보고서 생성기</h1>
-<form onsubmit="event.preventDefault(); generateReport();">
-  제목: <input type="text" id="title"><br>
-  요약: <textarea id="summary"></textarea><br>
-  <button type="submit">PDF 생성</button>
-</form>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script>
-async function generateReport() {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF();
-  doc.text(`제목: ${document.getElementById("title").value}`, 10, 10);
-  doc.text(document.getElementById("summary").value, 10, 20);
-  doc.save("report.pdf");
-}
-</script></body></html>
+<p>📑 보고서 생성기 입력폼 및 기능 영역입니다.</p>
+</body></html>
