--- a/seeds.html
+++ b/seeds.html
@@ -1,22 +1,19 @@
-
 <!DOCTYPE html><html><body>
-<h1>🌾 종자 추천 시스템</h1>
-<form onsubmit="event.preventDefault(); recommendSeeds();">
-  국가: <input type="text" id="country"><br>
-  계절: <input type="text" id="season"><br>
-  <button type="submit">종자 추천</button>
-</form>
-<ul id="result"></ul>
-<script>
-function recommendSeeds() {
-  const country = document.getElementById("country").value.toLowerCase();
-  const season = document.getElementById("season").value.toLowerCase();
-  const seeds = {
-    korea: { spring: ["상추", "시금치"], summer: ["오이", "토마토"] },
-    japan: { spring: ["배추", "당근"], summer: ["고추", "가지"] }
-  };
-  const result = seeds[country]?.[season] || ["추천 종자 없음"];
-  document.getElementById("result").innerHTML = result.map(seed => `<li>${seed}</li>`).join("");
-}
-</script>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
+<h1>🌾 종자 추천</h1>
+<p>🌾 종자 추천 입력폼 및 기능 영역입니다.</p>
 </body></html>
