--- a/tracking.html
+++ b/tracking.html
@@ -1,8 +1,19 @@
-
 <!DOCTYPE html><html><body>
-<h1>🗺️ 실시간 추적</h1>
-<form onsubmit="event.preventDefault(); alert('위치 확인 완료');">
-  트래킹 번호: <input type="text" id="track"><br>
-  <button type="submit">추적</button>
-</form>
+
+<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
+  <a href="index.html">홈</a>
+  <a href="contract.html">계약</a>
+  <a href="report.html">보고서</a>
+  <a href="ai.html">GPT 생성기</a>
+  <a href="smartfarm.html">스마트팜</a>
+  <a href="seeds.html">종자</a>
+  <a href="chart.html">시세</a>
+  <a href="firebase.html">저장</a>
+  <a href="logistics.html">물류</a>
+  <a href="tracking.html">추적</a>
+  <a href="notify.html">알림</a>
+</nav>
+
+<h1>🛰️ 물류 추적</h1>
+<p>🛰️ 물류 추적 입력폼 및 기능 영역입니다.</p>
 </body></html>
