--- a/seeds.html
+++ b/seeds.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html><html><body>
-
-<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
-  <a href="index.html">홈</a>
-  <a href="contract.html">계약</a>
-  <a href="report.html">보고서</a>
-  <a href="ai.html">GPT 생성기</a>
-  <a href="smartfarm.html">스마트팜</a>
-  <a href="seeds.html">종자</a>
-  <a href="chart.html">시세</a>
-  <a href="firebase.html">저장</a>
-  <a href="logistics.html">물류</a>
-  <a href="tracking.html">추적</a>
+<nav style="background:#f1f5f9; padding:10px; font-size:14px;">
+  <a href="index.html">홈</a> |
+  <a href="contract.html">계약</a> |
+  <a href="report.html">보고서</a> |
+  <a href="ai.html">GPT</a> |
+  <a href="smartfarm.html">스마트팜</a> |
+  <a href="seeds.html">종자</a> |
+  <a href="chart.html">시세</a> |
+  <a href="firebase.html">저장</a> |
+  <a href="logistics.html">물류</a> |
+  <a href="tracking.html">추적</a> |
   <a href="notify.html">알림</a>
-</nav>
+</nav><hr>
 
-<h1>🌾 종자 추천</h1>
-<p>🌾 종자 추천 입력폼 및 기능 영역입니다.</p>
+<h2>🌾 종자 추천</h2>
+<form onsubmit="event.preventDefault(); seedMatch();">
+  <label>국가: <input type="text" id="country"></label><br>
+  <label>계절: <input type="text" id="season"></label><br>
+  <button type="submit">추천</button>
+</form>
+<ul id="result"></ul>
+<script>
+function seedMatch() {
+  const c = document.getElementById("country").value.toLowerCase();
+  const s = document.getElementById("season").value.toLowerCase();
+  const table = { korea: { spring: ["상추", "시금치"], summer: ["오이", "토마토"] } };
+  const list = table[c]?.[s] || ["해당 없음"];
+  document.getElementById("result").innerHTML = list.map(seed => `<li>${seed}</li>`).join("");
+}
+</script>
 </body></html>
