--- a/smartfarm.html
+++ b/smartfarm.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html><html><body>
-
-<nav class="bg-white shadow px-4 py-3 text-sm font-medium space-x-4">
-  <a href="index.html">홈</a>
-  <a href="contract.html">계약</a>
-  <a href="report.html">보고서</a>
-  <a href="ai.html">GPT 생성기</a>
-  <a href="smartfarm.html">스마트팜</a>
-  <a href="seeds.html">종자</a>
-  <a href="chart.html">시세</a>
-  <a href="firebase.html">저장</a>
-  <a href="logistics.html">물류</a>
-  <a href="tracking.html">추적</a>
+<nav style="background:#f1f5f9; padding:10px; font-size:14px;">
+  <a href="index.html">홈</a> |
+  <a href="contract.html">계약</a> |
+  <a href="report.html">보고서</a> |
+  <a href="ai.html">GPT</a> |
+  <a href="smartfarm.html">스마트팜</a> |
+  <a href="seeds.html">종자</a> |
+  <a href="chart.html">시세</a> |
+  <a href="firebase.html">저장</a> |
+  <a href="logistics.html">물류</a> |
+  <a href="tracking.html">추적</a> |
   <a href="notify.html">알림</a>
-</nav>
+</nav><hr>
 
-<h1>🌱 스마트팜 생성기</h1>
-<p>🌱 스마트팜 생성기 입력폼 및 기능 영역입니다.</p>
+<h2>🌱 스마트팜 설계 생성기</h2>
+<form onsubmit="event.preventDefault(); alert('설계가 생성되었습니다.');">
+  <label>면적(m²): <input type="number" id="area"></label><br>
+  <label>작물 종류: <input type="text" id="plant"></label><br>
+  <label>자동화 수준:
+    <select id="auto">
+      <option>기본</option><option>중간</option><option>고급</option>
+    </select>
+  </label><br>
+  <button type="submit">설계안 출력</button>
+</form>
 </body></html>
