--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html><html><body>
 <nav style="background:#f1f5f9; padding:10px; font-size:14px;">
   <a href="index.html">홈</a> |
@@ -8,11 +9,9 @@
   <a href="seeds.html">종자</a> |
   <a href="chart.html">시세</a> |
   <a href="firebase.html">저장</a> |
-  <a href="logistics.html">물류</a> |
-  <a href="tracking.html">추적</a> |
-  <a href="notify.html">알림</a>
+  <a href="firebase_log_input.html">📥 사용자 입력</a> |
+  <a href="admin.html">🛠 관리자</a>
 </nav><hr>
-
-<h1>🌿 AgriNexus World 전체 구조</h1>
-<p>모든 기능을 하나의 통일된 시스템으로 구성했습니다.</p>
+<h1>🌿 AgriNexus World 통합 플랫폼</h1>
+<p>사용자 입력 → Firebase 저장 → 관리자 확인</p>
 </body></html>
