--- a/price.html
+++ b/price.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html><html><body>
-<h1>🌾 가격 수집</h1>
-<form onsubmit="event.preventDefault(); alert('가격 조회됨');">
-  국가: <input type="text" id="country"><br>
-  작물: <input type="text" id="crop"><br>
-  <button type="submit">조회</button>
+<h1>🌾 가격 수집기</h1>
+<form>
+  나라 선택: <select><option>한국</option><option>일본</option></select><br>
+  작물명: <input type="text" name="crop"><br>
+  <button type="submit">가격 조회</button>
 </form>
 </body></html>
