--- a/admin.html
+++ b/admin.html
@@ -1,42 +1,42 @@
-<!DOCTYPE html><html><body>
-<nav style="background:#f1f5f9; padding:10px; font-size:14px;">
-  <a href="index.html">홈</a> |
-  <a href="contract.html">계약</a> |
-  <a href="report.html">보고서</a> |
-  <a href="ai.html">GPT</a> |
-  <a href="smartfarm.html">스마트팜</a> |
-  <a href="seeds.html">종자</a> |
-  <a href="chart.html">시세</a> |
-  <a href="firebase.html">저장</a> |
-  <a href="admin.html">🛠 관리자</a>
-</nav><hr>
 
-<h2>🛠 관리자 - 사용자 로그 확인</h2>
-<ul id="logList"></ul>
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Admin Dashboard</title>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
 
+    
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-  projectId: "YOUR_PROJECT",
-  storageBucket: "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyAIzOk9HBBW...JzTpk",
+  authDomain: "agrinexus-world-aa9b2.firebaseapp.com",
+  projectId: "agrinexus-world-aa9b2",
+  storageBucket: "agrinexus-world-aa9b2.appspot.com",
+  messagingSenderId: "440786913965",
+  appId: "1:440786913965:web:d0d57105ee32999b5ad424"
 };
 
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-const logRef = ref(db, "logs/");
 
-onValue(logRef, (snapshot) => {
-  const data = snapshot.val();
-  const out = Object.entries(data || {}).map(([k, v]) =>
-    `<li><strong>${v.user}</strong>: ${v.message}<br><small>${v.time}</small></li>`
-  ).join("");
-  document.getElementById("logList").innerHTML = out;
-});
-</script>
-</body></html>
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    window.onload = () => {
+      const logRef = ref(db, 'logs/');
+      onValue(logRef, (snapshot) => {
+        const logs = snapshot.val();
+        const logArea = document.getElementById("logArea");
+        logArea.innerHTML = "";
+        for (let key in logs) {
+          const entry = logs[key];
+          logArea.innerHTML += `<p>[${entry.timestamp}] ${entry.message}</p>`;
+        }
+      });
+    }
+  </script>
+</head>
+<body>
+  <h1>관리자 로그 뷰어</h1>
+  <div id="logArea">로그 로딩 중...</div>
+</body>
+</html>
