--- a/firebase_log_input.html
+++ b/firebase_log_input.html
@@ -1,44 +1,39 @@
-<!DOCTYPE html><html><body>
-<nav style="background:#f1f5f9; padding:10px; font-size:14px;">
-  <a href="index.html">홈</a> |
-  <a href="contract.html">계약</a> |
-  <a href="report.html">보고서</a> |
-  <a href="ai.html">GPT</a> |
-  <a href="smartfarm.html">스마트팜</a> |
-  <a href="seeds.html">종자</a> |
-  <a href="chart.html">시세</a> |
-  <a href="firebase.html">저장</a> |
-  <a href="admin.html">🛠 관리자</a>
-</nav><hr>
 
-<h2>📥 사용자 로그 입력</h2>
-<form onsubmit="event.preventDefault(); saveLog();">
-  <label>이름: <input type="text" id="user"></label><br>
-  <label>내용: <input type="text" id="message"></label><br>
-  <button type="submit">로그 저장</button>
-</form>
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Firebase Log Input</title>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+    import { getDatabase, ref, push, set } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
 
+    
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-  projectId: "YOUR_PROJECT",
-  storageBucket: "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyAIzOk9HBBW...JzTpk",
+  authDomain: "agrinexus-world-aa9b2.firebaseapp.com",
+  projectId: "agrinexus-world-aa9b2",
+  storageBucket: "agrinexus-world-aa9b2.appspot.com",
+  messagingSenderId: "440786913965",
+  appId: "1:440786913965:web:d0d57105ee32999b5ad424"
 };
 
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
 
-window.saveLog = () => {
-  const user = document.getElementById("user").value;
-  const message = document.getElementById("message").value;
-  push(ref(db, "logs/"), { user, message, time: new Date().toISOString() });
-  alert("로그가 저장되었습니다.");
-};
-</script>
-</body></html>
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    function submitLog() {
+      const message = document.getElementById("logMessage").value;
+      const newRef = push(ref(db, 'logs/'));
+      set(newRef, {
+        message: message,
+        timestamp: new Date().toISOString()
+      });
+    }
+  </script>
+</head>
+<body>
+  <h1>사용자 로그 입력</h1>
+  <input type="text" id="logMessage" placeholder="메시지를 입력하세요" />
+  <button onclick="submitLog()">제출</button>
+</body>
+</html>
