--- a/index.html
+++ b/index.html
@@ -1,69 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus World - 로그 통계</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAIzOk9HBBW...JzTpk",
-      authDomain: "agrinexus-world-aa9b2.firebaseapp.com",
-      projectId: "agrinexus-world-aa9b2",
-      storageBucket: "agrinexus-world-aa9b2.appspot.com",
-      messagingSenderId: "440786913965",
-      appId: "1:440786913965:web:d0d57105ee32999b5ad424"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    const ctx = document.getElementById('logChart').getContext('2d');
-    const chart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: [],
-        datasets: [{
-          label: '일별 로그 수',
-          data: [],
-          backgroundColor: 'rgba(0, 180, 130, 0.5)',
-          borderColor: 'rgba(0, 180, 130, 1)',
-          borderWidth: 1
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: { beginAtZero: true }
-        }
-      }
-    });
-
-    function getDateKey(dateStr) {
-      return dateStr.substring(0, 10); // yyyy-mm-dd
-    }
-
-    const logRef = ref(db, 'logs/');
-    onValue(logRef, (snapshot) => {
-      const data = snapshot.val();
-      const dateMap = {};
-      for (let key in data) {
-        const date = getDateKey(data[key].timestamp || "");
-        dateMap[date] = (dateMap[date] || 0) + 1;
-      }
-      const labels = Object.keys(dateMap);
-      const counts = Object.values(dateMap);
-      chart.data.labels = labels;
-      chart.data.datasets[0].data = counts;
-      chart.update();
-    });
-  </script>
-</head>
-<body>
-  <h1>📊 실시간 사용자 로그 수</h1>
-  <canvas id="logChart" width="600" height="300"></canvas>
-</body>
-</html>
+<!DOCTYPE html><html><body><h1>AgriNexus World Portal</h1></body></html>
