--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html><body><h1>AgriNexus World Portal</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>AgriNexus World - 전체 메뉴 통합</title>
+</head>
+<body>
+  <nav>
+    <a href="index.html">홈</a> |
+    <a href="contract.html">계약</a> |
+    <a href="report.html">보고서</a> |
+    <a href="ai.html">GPT</a> |
+    <a href="smartfarm.html">스마트팜</a> |
+    <a href="seeds.html">종자</a> |
+    <a href="chart.html">시세</a> |
+    <a href="firebase.html">저장</a> |
+    <a href="admin.html">관리자</a> |
+    <a href="global_portal.html">🌍 글로벌 포털</a>
+  </nav>
+  <h1>🌿 AgriNexus World 메인 포털</h1>
+</body>
+</html>
