--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <a href="admin.html">관리자</a> |
     <a href="global_portal.html">🌍 글로벌 포털</a>
   </nav>
+<select onchange="window.location.href=this.value" style="float:right; margin-top:10px;">
+  <option value='index.html'>🇰🇷 Korean</option>
+  <option value='index_en.html'>🌍 English</option>
+</select>
+
   <h1>🌿 AgriNexus World 메인 포털</h1>
 </body>
 </html>
