--- a/index_en.html
+++ b/index_en.html
@@ -24,6 +24,11 @@
     <a href="admin.html">Admin</a>
     <a href="global_portal.html">Global Portal</a>
   </nav>
+<select onchange="window.location.href=this.value" style="float:right; margin-top:10px;">
+  <option value='index.html'>🇰🇷 Korean</option>
+  <option value='index_en.html'>🌍 English</option>
+</select>
+
 
   <section>
     <h1>🌿 AgriNexus World - Unified Smart Agriculture Platform</h1>
