--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>AgriNexus World - Full Portal</title>
-</head>
+<html lang="en">
+<head><meta charset="UTF-8"><title>AgriNexus - Full Platform</title></head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="report_dynamic.html">📝 Report Generator</a> |
-    <a href="report_admin.html">📋 Admin Report List</a>
-  </nav>
-  <h1>🌿 Welcome to AgriNexus World Portal</h1>
+  <h1>🌿 AgriNexus All-In-One Menu</h1>
+  <ul>
+    <li><a href="index.html">index.html</a></li>
+<li><a href="report_admin.html">report_admin.html</a></li>
+<li><a href="report_admin_export.html">report_admin_export.html</a></li>
+<li><a href="report_admin_filtered.html">report_admin_filtered.html</a></li>
+<li><a href="report_ai_email.html">report_ai_email.html</a></li>
+<li><a href="report_dynamic.html">report_dynamic.html</a></li>
+  </ul>
 </body>
 </html>
