--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>AgriNexus - Full Platform</title></head>
+<head><meta charset="UTF-8"><title>AgriNexus World - Ultimate Portal</title></head>
 <body>
-  <h1>🌿 AgriNexus All-In-One Menu</h1>
+  <h1>🌿 AgriNexus World - Global Smart Agriculture Platform</h1>
   <ul>
-    <li><a href="index.html">index.html</a></li>
+    <li><a href="README.md">README.md</a></li>
+<li><a href="README_EN.md">README_EN.md</a></li>
+<li><a href="global_portal.html">global_portal.html</a></li>
+<li><a href="index.html">index.html</a></li>
+<li><a href="index_auto_lang.html">index_auto_lang.html</a></li>
+<li><a href="index_en.html">index_en.html</a></li>
+<li><a href="lang.json">lang.json</a></li>
 <li><a href="report_admin.html">report_admin.html</a></li>
 <li><a href="report_admin_export.html">report_admin_export.html</a></li>
 <li><a href="report_admin_filtered.html">report_admin_filtered.html</a></li>
 <li><a href="report_ai_email.html">report_ai_email.html</a></li>
 <li><a href="report_dynamic.html">report_dynamic.html</a></li>
+<li><a href="report_template.json">report_template.json</a></li>
   </ul>
 </body>
 </html>
